# RAGKnowledgeAssistant

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEMO_GUIDE.md  Dockerfile  GITHUB_PUSH_GUIDE.md  GOVERNMENT_PRESENTATION.md  INTERVIEW_PREP.md  LICENSE  MANIFEST.in  PRESENTATION_RESOURCE_GUIDE.md  README.md  SECURITY.md  UI_UX_REDESIGN.md  config.py  docker-compose.yml  index.html  main.py  netlify.toml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: quality.yml  tests.yml
models/: schemas.py
services/: chunker.py  document_loader.py  embeddings.py  evaluator.py  guardrails.py  llm_services.py  prompt_builder.py  retriever.py  vector_store.py
